force-app/main/default/objects/Method_Log_Setting__mdt/Method_Log_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Method Log Setting</label>
    <pluralLabel>Method Log Settings</pluralLabel>
</CustomObject>