force-app/main/default/objects/Method_Log_Setting__mdt/fields/Parent_Class__c.field-meta.xml
<CustomField>
    <fullName>Parent_Class__c</fullName>
    <label>Parent Class</label>
    <referenceTo>Class_Log_Setting__mdt</referenceTo>
    <relationshipLabel>Method Log Settings</relationshipLabel>
    <relationshipName>Methods</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>